2008-07-27  Andy Buckley  <andy@insectnation.org>

	* Added better tests for Boost headers.

	* Added testing for -ansi, -pedantic and -Wall compiler flags.

2008-07-17  Andy Buckley  <andy@insectnation.org>

	* Improvements to aida2flat: now can produce one output file per
	histo, and there is a -g "gnuplot mode" which comments out the
	YODA/make_plot headers to make the format readable by gnuplot.

	* Import boost::assign namespace contents into the Rivet namespace
	--- provides very useful intuitive collection initialising
	functions.

2008-07-15  Andy Buckley  <andy.buckley@dur.ac.uk>

	* Fixed missing namespace in vector/matrix testing.

	* Removed Boost headers: now a system dependency.

	* Fixed polarRadius infinite loop.

2008-07-09  Andy Buckley  <andy@insectnation.org>

	* Fixed definitions of mapAngleMPiToPi, etc. and used them to fix
	the Jet::getPhi method.

	* Trialling use of "foreach" loop in CDF_2004: it works! Very nice.

2008-07-08  Andy Buckley  <andy@insectnation.org>

	* Removed accidental reference to an "FS" projection in
	FinalStateHCM's compare method. rivetgun -A now works again.

	* Added TASSO, SLD and D0_2008 reference data. The TASSO and SLD
	papers aren't installed or included in the tarball since there are
	currently no plans to implement these analyses.

	* Added Rivet namespacing to vector, matrix etc. classes. This
	required some re-writing and the opportunity was taken to move
	some canonical function definitions inside the classes and to
	improve the header structure of the Math area.

2008-07-07  Andy Buckley  <andy@insectnation.org>

	* Added Rivet namespace to Units.hh and Constants.hh.

	* Added Doxygen "@brief" flags to analyses.

	* Added "RIVET_" namespacing to all header guards.

	* Merged Giulio Lenzi's isolation/vetoing/invmass projections and
	D0 2008 analysis.

2008-06-23  Jon Butterworth  <J.Butterworth@ucl.ac.uk>

	* Modified FastJet to fix ysplit and split and filter.
